--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: barrydillon
 description: personal website
 url: https://bmdillon.github.io
 author: bmdillon
-timezone: Dublin/Europe
+timezone: Europe/Dublin
 timezone_short: ET
 
 # Keywords
