--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,8 @@ pagination:
   sort_field: 'date'
   sort_reverse: true
 
-# Category Paginating
-autopages:
-  enabled: true
-  categories:
-    title: 'Posts in category :cat'
-    permalink: '/category/:cat'
-    silent: false
-
 # Exclusions
-exclude: [ 'README.md', 'COPYING' ]
+exclude: [ 'README.md', 'COPYING', 'vendor' ]
 
 # Plugins
 plugins:
